configuracao pipeline